# pd200x

./: 99-pd200x.rules  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: api.rs  device.rs  error.rs  lib.rs  packet.rs  presets.rs  protocol.rs
tests/: hardware.rs
