[package]
name = "pd200x"
version = "0.2.0"
edition = "2024"
description = "Rust driver for the Maono PD200X USB microphone"
license = "MIT"
repository = "https://github.com/advnpzn/pd200x"
homepage = "https://github.com/advnpzn/pd200x"
documentation = "https://docs.rs/pd200x"
keywords = ["maono", "pd200x", "usb", "hid", "microphone"]
categories = ["hardware-support", "api-bindings"]
readme = "README.md"
exclude = [
    "CLAUDE.md",
    "99-pd200x.rules",
    "tests/hardware.rs",
    "*.py",
]

[dependencies]
hidapi = "2"
thiserror = "2"
